fixed typo in bio of Sandra Okonofua

--- a/_data/2022/jias/people.yml
+++ b/_data/2022/jias/people.yml
@@ -187,7 +187,7 @@ opportunities."
     - name: Sandra Okonofua
       image: /assets/images/18mFVGnAml9K9AV2Ge0cJxwnLdlXjHKH5.jpeg
       website: https://twitter.com/sandraokonofua
-      bio: "Sandra Okonofua is a doctoral student in Sociology at Yale University. She is      interested in interrogating patterns of educational inequality using critical computational      social science and qualitative methods to better understand the challenges Black (African &      African-African American) girls face in obtaining STEM credentials and embarking on STEM      careers. Before Yale, Sandra was a licensed school counselor and teacher. She is a graduate      of Dartmouth College, the University of Pennsylvania and Harvard University. "
+      bio: "Sandra Okonofua is a doctoral student in Sociology at Yale University. She is interested in interrogating patterns of educational inequality using critical computational social science and qualitative methods to better understand the challenges Black (African & African-American) girls face in obtaining STEM credentials and embarking on STEM      careers. Before Yale, Sandra was a licensed school counselor and teacher. She is a graduate      of Dartmouth College, the University of Pennsylvania and Harvard University. "
 
     - name: Olaide Olawumi Ojoniyi 
       bio: "Olaide Ojoniyi is a doctoral student at the Statistics and Population studies      department, University of the Western Cape, Cape Town. She is also a Statistical Coach with      the Division for Postgraduate Studies at the university. Her current research is on      adolescents' and young women's sexual and reproductive health. "
