--- a/_data/2022/edinburgh/participants.yml
+++ b/_data/2022/edinburgh/participants.yml
@@ -95,7 +95,7 @@
   mixed methods approaches to policy-oriented research."
 
 - name: Francois t'Serstevens
-  image: /assets/images/1dkSJkOp-tNrDoZbxl4WrlZsKkCM7D6gV.heif
+  image: /assets/images/1dkSJkOp-tNrDoZbxl4WrlZsKkCM7D6gV.jpg
   bio: "François t’Serstevens is a PhD candidate in the department of Data analytics
   and Digitalisation at Maastricht University. His research leverages machine learning
   to better understand and prevent the spread of fake news through social media."
@@ -111,7 +111,7 @@
   website: https://www.favstats.eu/
     
 - name: Stefanie Klein
-  image: /assets/images/1B73PrT7TUr9cLMTVwoUPNZHIrNN1e8mh.jpeg
+  image: /assets/images/1B73PrT7TUr9cLMTVwoUPNZHIrNN1e8mh.jpg
   bio: "Stefanie Klein is a PhD student in the Everyday Media lab at the Leibniz-Institut
   für Wissensmedien in Tübingen, Germany. Using experimental and computational methods,
   she investigates the impact of conversational features of chatbots on user acceptance
@@ -128,7 +128,7 @@
   website: https://twitter.com/CV_ChristinaVi
 
 - name: Daniel Malmer
-  image: /assets/images/1J_VMpAj8zflHqyGZmNvhcbyexjXj6JH9.jpeg
+  image: /assets/images/1J_VMpAj8zflHqyGZmNvhcbyexjXj6JH9.png
   bio: "Dan Malmer is a PhD student at UNC-Chapel Hill. He studies online radicalization,
   extremism, and conspiracy theories. He is a Silicon Valley veteran, having worked
   at a number of technology startups include Netscape Communications. Dan holds
@@ -203,7 +203,7 @@
   website: https://blogs.napier.ac.uk/aleksander-bielinski/author/aleksander-bielinski/
   
 - name: Ernesto de León
-  image: /assets/images/13uVcGF8SusVhRSyDgjuEtYATenrdF2nz.jpeg
+  image: /assets/images/13uVcGF8SusVhRSyDgjuEtYATenrdF2nz.png
   bio: "Ernesto de León is a Phd Student at the University of Bern, in Switzerland.
   His research focusses on political information flows in a digital age and its
   effects on political attitudes. To do so, he makes use of computational methodologies
