Oxford - add participants

--- a/_data/2022/oxford/participants.yml
+++ b/_data/2022/oxford/participants.yml
@@ -1,5 +1,5 @@
 - name: Anna Altová
-  image: /assets/images/ox22_Altová_Anna.jpg
+  image: /assets/images/ox22_Altova_Anna.jpg
   bio: "Anna is a PhD candidate in the Department of Demography and Geodemography at Charles University. Having a background in demography and social epidemiology, her research focuses mainly on cancer epidemiology with a special emphasis on cancer prevention and screening behaviours among Czech women using a mixed methods approach. "
   website: https://twitter.com/boruvka_a
   
@@ -44,7 +44,7 @@
   website: https://rganly.github.io/
   
 - name: Natalia Garbiras-Díaz
-  image: /assets/images/ox22_Garbiras.Díaz_Natalia.jpg
+  image: /assets/images/ox22_Garbiras-Diaz_Natalia.jpg
   bio: "Natalia Garbiras-Díaz is a Max Weber Fellow at the European University Institute. She received her PhD in Political Science from the University of California, Berkeley in 2021, where she is currently a Research Associate at the Center for Development Policy. She holds a Master's degree in Economics from the Universidad de los Andes (Colombia). Prior to receiving her PhD, she worked at the World Bank, the Observatory of Democracy and the National Planning Department of Colombia. Her main research interests are comparative politics and the political economy of development, focusing on corruption, public goods provision and accountability in Latin America. She also studies the formation of citizen and ex-combatant attitudes and their role in post-conflict peace stabilization. In her book project, she explores the informational and institutional environments that pave the way for the rise and success of outsider candidates."
   website: https://www.nataliagarbirasdiaz.com/
   
