--- a/_data/2022/taiwan/people.yml
+++ b/_data/2022/taiwan/people.yml
@@ -3,7 +3,7 @@ speakers:
   people:
     - name: Xuechunzi Bai
       image: /assets/images/XuechunziBai.jpg
-      bio: "Bai (pronounced like bye) is a rising fifth-year Ph.D. student in the Department of Psychology at Princeton University. She holds a certificate in Statistics and Machine Learning and a joint degree in Social Policy from the School of Public and International Affairs. She is a graduate student fellow in the Program in Cognitive Science and the winner of the Prize Fellowship in the Social Sciences at Princeton. Her research examines how and why humans learn inaccurate stereotypes. Whenever she doesn't feel like researching, she likes walking my 100-pound big boy -- an Alaskan Mamalute -- Alpha around the Princeton campus."
+      bio: "Bai (pronounced like bye) is a rising fifth-year Ph.D. student in the Department of Psychology at Princeton University. She holds a certificate in Statistics and Machine Learning and a joint degree in Social Policy from the School of Public and International Affairs. She is a graduate student fellow in the Program in Cognitive Science and the winner of the Prize Fellowship in the Social Sciences at Princeton. Her research examines how and why humans learn inaccurate stereotypes. Whenever she doesn't feel like researching, she likes walking her 100-pound big boy -- an Alaskan Mamalute -- Alpha around the Princeton campus."
       website: https://www.xuechunzibai.com/
     - name: Spe Chen
       image: /assets/images/SpeChen.jpg
