Oxford - correction participants

--- a/_data/2022/oxford/participants.yml
+++ b/_data/2022/oxford/participants.yml
@@ -98,7 +98,7 @@
   bio: "William Rudgard is a post-doctoral researcher in the Department of Social Policy and Intervention at the University of Oxford. His research focuses on identifying cost-effective services that may support and empower vulnerable adolescents across Ethiopia, South Africa, and Zimbabwe to participate fully in this critical period of life. He is particularly interested in the interconnected nature of social vulnerabilities, and the transformative role of health and social protection systems. "
   website: https://twitter.com/WillRudgard
   
-- name: Ryan Schandler
+- name: Ryan Shandler
   image: /assets/images/ox22_shandler.jpg
   bio: "Ryan Shandler is a Postdoctoral Fellow at Nuffield College, and the Blavatnik School of Government, University of Oxford. Ryan’s research interests lie at the intersection of international security and political psychology. He explores how emerging technologies elevate the role of public opinion in international affairs. Methodologically, Ryan conducts experiments that expose participants to cyber threats in order to measure the societal, political, and psychological consequences. Ryan received his PhD in political science from the University of Haifa, and has a Bachelor of Laws (Hons) from the University of Melbourne."
   website: https://sites.google.com/view/ryanshandler
