--- a/_data/2022/covenant-university/speakers.yml
+++ b/_data/2022/covenant-university/speakers.yml
@@ -8,15 +8,20 @@
   bio: "<p align='justify'>Diego Alburez-Gutierrez (PhD in Demography, London School of Economics 2018) is a Research Scientist at the Max Planck Institute for Demographic Research, where he specialises in inter-generational demography. His work integrates non-traditional data (e.g., from digital or computational sources) with established demographic sources (e.g. censuses and population registers).</p>"
   website: http://alburez.me/
 
+- name: Robert Yao Djogbenou
+  image: 
+  bio: "<p align='justify'>Robert Djogbenou is a PhD candidate in Demography at the Université de Montréal. He has a Post Graduate Program in Artificial Intelligence and Machine Learning at the University of Texas at Austin. His research uses computational approaches to study immigrants’ socio-cultural integration in Canada. His other interests include reproductive health and family dynamics in sub-Saharan Africa. He is affiliated with the Lab on quantitative and computational social science at the Université du Québec à Montréal.</p>"
+  website: 
+
 - name: Stephane Helleringer
   image: /assets/images/Shelleringer.jpg
   bio: "<p align='justify'>Stéphane Helleringer is a demographer with interests in a) the development of new methods to measure demographic trends in countries with limited data, and b) measuring the impact of epidemics on population health and mortality. He has conducted several trials of innovative approaches to collecting demographic data (e.g., computer vision). He has also worked extensively on the impact of HIV/AIDS, Polio, and Ebola in several African countries. Helleringer is currently the principal investigator of a multi-country study on adolescent and adult mortality in Malawi, Uganda, Guinea-Bissau, and Bangladesh. He recently initiated a panel study of behavioral change during the COVID-19 pandemic in Malawi. He is a member of the expert group advising the World Health Organization (WHO) on COVID-19 mortality assessment.</p>"
   website: https://nyuad.nyu.edu/en/academics/divisions/social-science/faculty/stephane-helleringer.html
 
-- name: Suhem Parack
-  image: /assets/images/parack2022.jpeg
-  bio: "<p align='justify'>Suhem Parack is a Staff Developer Advocate at Twitter. He helps students and academic researchers with their research using the Twitter API. Before joining Twitter, he was a Solutions Architect at Amazon.</p>"
-  website: https://twitter.com/suhemparack
+- name: Sena Okuboyejo
+  image: /assets/images/SOkuboyejo.jpeg
+  bio: "<p align='justify'>Sena Okuboyejo holds a PhD in Management Information System; and is currently with the Nova Scotia Health Authority, Canada,  on the One Person One Record (OPOR) project. Her research interest lies in the intersection of technology, population health, and health behaviour modification.   She works with textual and unstructured data to understand perceptions and attitudes towards health issues.</p>"
+  website: 
   
 - name: Tim Riffe
   image: /assets/images/tim_riffe.jpg
