--- a/_data/2022/hong-kong/teaching_assistants.yml
+++ b/_data/2022/hong-kong/teaching_assistants.yml
@@ -1,1 +1,6 @@
-- name:
+- name: Yujie Li
+  image: /assets/images/YujieLi.jpg
+  bio: "Yujie Li is a Ph.D. student in the Department of Sociology at The Chinese University of Hong Kong. His research interests include computational social science, political communication, and social networks. Currently, he is working on some projects that mainly use agent-based modeling and longitudinal network analysis method."
+  website: http://yujie.li/
+  
+  
