--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -36,7 +36,7 @@
   name: Praxis to Power / Juneteenth
   events:
     - name: "10:00 - 11:00 Praxis to Power Day 2 Introduction and logistics (*Zoom*)"
-    - name: '11:00 - 12:00 SICSS-H/M 2021 Funded Alumni Research in Progress Panel [(blog)](https://www.methodspace.com/blog/sicss-howardmathematica-alumni-receive-inaugural-excellence-in-computational-social-science-research-awards) (slide) (*Zoom*)
+    - name: '11:00 - 12:00 SICSS-H/M 2021 Funded Alumni Research in Progress Panel [(blog)](https://www.methodspace.com/blog/sicss-howardmathematica-alumni-receive-inaugural-excellence-in-computational-social-science-research-awards) (slide) (*Zoom*) (LIVE Q+A)
    
      
             
@@ -248,7 +248,7 @@
         
         - [Chris Hoffman](https://research-it.berkeley.edu/chris-hoffman), Associate Director, Research IT, UC Berkeley
         
-        - [Anna Sackmann](https://researchdata.berkeley.edu/people/anna-sackmann), Science Data & Engineering Librarian, UC Berkeley]"
+        - [Anna Sackmann](https://researchdata.berkeley.edu/people/anna-sackmann), Science Data & Engineering Librarian, UC Berkeley"
         
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:00 Continue participating in SICSS-H/M mass collaboration activity (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
@@ -310,7 +310,7 @@
     - name: "Mathematica TAs are available via email for consultation (please see Slack)"
     - name: "10:00 - 10:15 Logistics (*Zoom*)"
     - name: "10:15 - 12:00 Work on group projects (*Zoom*)"
-    - name: '12:00 - 1:00 New Frontiers in Research and Technology: "The Future of Research and Equity in the Metaverse" Panel (encouraged) (slide) (*Zoom*) (LIVE Q+A)
+    - name: '12:00 - 1:00 New Frontiers in Research and Technology: "The Future of Research and Equity in the Metaverse" Panel (encouraged) (*Zoom*) (LIVE Q+A)
         
       
      
@@ -318,9 +318,9 @@
       
           - [Andre Brock, Ph.D.](https://andrebrock.academia.edu/), Associate Professor of Media Studies at Georgia Tech (book)[https://nyu.universitypressscholarship.com/view/10.18574/nyu/9781479820375.001.0001/upso-9781479820375] (video)
 
-          - [Courtney D. Cogburn, Ph.D.](https://socialwork.columbia.edu/faculty-research/faculty/full-time/courtney-d-cogburn/), Associate Professor of Social Work at Columbia University (video)
+          - [Courtney D. Cogburn, Ph.D.](https://socialwork.columbia.edu/faculty-research/faculty/full-time/courtney-d-cogburn/), Associate Professor of Social Work at Columbia University (slide) (video)
 
-          - [Kyla McMullen, Ph.D.](http://kylamcmullen.com/), Assistant Professor of Computer and Information Science and Engineering at University of Florida (video)
+          - [Kyla McMullen, Ph.D.](http://kylamcmullen.com/), Assistant Professor of Computer and Information Science and Engineering at University of Florida (slide) (video)
           
           - [Danielle Olson, Ph.D.](http://hellodanio.com/about.html), AI/ML Human Factors Researcher at Apple [(video)](https://youtu.be/ASBM3i9-mvg)
 
@@ -354,13 +354,13 @@
   events:
     - name: "Mathematica TAs are available via email for consultation (please see Slack)"
     - name: "9:30 - 10:00 Logistics (*Zoom*)"
-    - name: "10:00 - 11:30 Mathematica Roundtable (slide) (*Zoom*)
+    - name: "10:00 - 11:30 Mathematica Roundtable (slide) (*Zoom*) (LIVE Q+A)
     
-        - Alex Bohl, Ph.D., Director of Data Innovation, Health Services Unit, Mathematica (video)
+        - Alex Bohl, Ph.D., Principle Data Scientist, Mathematica (video)
         
-        - Sheldon Bond, Program analyst, Data Analytics Division, Mathematica (video)
+        - Sheldon Bond, Senior Program Lead, Mathematica (video)
         
-        - Deliya Wesley, Senior director of Health Equity, Mathematica (video)"
+        - Deliya Wesley, Senior Director of Health Equity, Mathematica (video)"
         
     - name: "11:30 - 12:00 Work on group projects (*Zoom*)"
     - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #7: Africa Center for Strategic Studies (slide) (*Zoom*) [(video)](https://youtu.be/MpYlsOicYD0) (LIVE Q+A) OR R, Python, and STATA Office hours with Mathematica TAs (as needed) (*Zoom*)
@@ -368,7 +368,7 @@
         - [Mark Duerksen, Ph.D.](https://africacenter.org/experts/dr-mark-duerksen/), Research Associate, Africa Center for Strategic Studies" 
         
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
-    - name: "4:00 - 5:30 [Shawndra Hill, Ph.D.](https://www8.gsb.columbia.edu/cbs-directory/detail/sbh2146), Senior lecturer, Marketing, Columbia Business School & Principal Scientist at Facebook in the Core Data Science Team, (Title TBA) (video) - LIVE session to include Q&A and office hour (slide) (*Zoom*) (LIVE Q+A)"
+    - name: "4:00 - 5:30 [Shawndra Hill, Ph.D.](https://www8.gsb.columbia.edu/cbs-directory/detail/sbh2146), Senior lecturer, Marketing, Columbia Business School & Principal Scientist at Facebook in the Core Data Science Team, (Title TBA) (video) - LIVE session to include Q&A and office hour (*Zoom*) (LIVE Q+A)"
     
 
 - date: 2022-07-01
