--- a/_data/2022/edinburgh/participants.yml
+++ b/_data/2022/edinburgh/participants.yml
@@ -43,6 +43,7 @@
   website: https://www.linkedin.com/in/isabelkrakoff
 
 - name: Alisha Kelkar
+  image: /assets/images/alishakelkar.jpeg
   bio: "Alisha Kelkar is an undergraduate student at the University of North Carolina
   at Chapel Hill where she is majoring in Computer Science and Psychology. Her research
   interests focus on the intersection of computer science, psychology and linguistics.
