--- a/_data/2022/edinburgh/participants.yml
+++ b/_data/2022/edinburgh/participants.yml
@@ -89,11 +89,13 @@
   website: https://www.linkedin.com/in/katharina-baum-27a348143
 
 - name: Nicolette Dakin
+  image: /assets/images/nicolettephoto.jpg
   bio: "Nicolette is PhD student in Critical Social/Personality and Environmental Psychology
   at the Graduate Center of CUNY. She also holds a Master's in Social Work from NYU. 
   Her research interests are focused on the roles of ideology, social identity, and discourse in emergent 
   social issues, such as climate change and political polarization. She is particularly interested in utilizing 
   mixed methods approaches to policy-oriented research."
+  website: https://enviropsych.org/students/nicolette-dakin/
 
 - name: Francois t'Serstevens
   image: /assets/images/1dkSJkOp-tNrDoZbxl4WrlZsKkCM7D6gV.jpg
