--- a/_data/2022/rutgers/participants.yml
+++ b/_data/2022/rutgers/participants.yml
@@ -28,7 +28,7 @@
   
 - name: Mona Kleinberg
   image: 
-  bio: 
+  bio: Mona is currently an Assistant Professor at the University of Massachusetts, Lowell and will take up a new faculty position at Queens College, CUNY in the Fall of 2022. Mona is keenly interested in the political effects of the incorporation of technology into routine cognitive functions. Her research addresses whether citizens can google their way through politics and examines what civic competence looks like when people use the internet as an extension of their mind. She is also interested in the intersection of race and new technology (e.g. the effect of internet use by marginalized groups on representation, and the connection between Facebook and ethnic conflict). 
   website:   
   
 - name: Samantha Koprowski
