--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -9,7 +9,7 @@
     - name: "**11:00-12:15** Introduction to Computational Social Science<br/>"
     - name: "**12:15-13:00** Panel Discussion <br/> Computer Science meets Social science"
     - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-15:00** Invited Presentation: R packages for open data from Africa"
+    - name: "**14:00-15:00** Invited Presentation: R for Social Sciences and Humanities"
     - name: "**15:00-16:00** Invited Presentation: "
     - name: "**16:00-18:00** Logistics and AOB"
     - name: "**18:00-** Dinner"
