--- a/_data/2022/duke/speakers.yml
+++ b/_data/2022/duke/speakers.yml
@@ -8,3 +8,8 @@
   bio: "Justin Grimmer is a Professor of Political Science and a Senior Fellow at the Hoover Institution at Stanford University.  He co-directs the Democracy and Polarization Lab.  His work examines how representation occurs in American democracy developing and using new statistical and machine learning tools.  Along with Molly Roberts and Brandon Stewart, he is the author of the recently released book 'Text as Data: A New Framework for Machine Learning in the Social Sciences.' "
   website: https://politicalscience.stanford.edu/people/justin-ryan-grimmer
 
+- name: "Casey Fiesler"
+  image: /assets/images/casey_fiesler.jpg
+  bio: "Casey Fiesler is an assistant professor in Information Science (and Computer Science by courtesy) at University of Colorado Boulder. She researches and teaches in the areas of technology ethics, internet law and policy, and online communities. Her work on research ethics for data science, ethics education in computing, and broadening participation in computing is supported by the National Science Foundation, and she is the recipient of an NSF CAREER Award.  Also a public scholar, she is a frequent commentator and speaker on topics of technology ethics and policy, and her research has been covered everywhere from The New York Times to Teen Vogue, but she's most proud of her TikToks. She holds a PhD in Human-Centered Computing from Georgia Tech and a JD from Vanderbilt Law School."
+  website: https://caseyfiesler.com/
+
