--- a/_data/2022/atlanta/schedule.yml
+++ b/_data/2022/atlanta/schedule.yml
@@ -17,18 +17,18 @@
 - date: 2022-06-22
   name: Collecting Digital Trace Data
   events:
-    - name: "10:00 - 11:00 Announcements, Icebreaker, an Introduction to Digital Trace Data"
-    - name: "11:00 - 12:00 Collecting Digital Trace Data"
-    - name: "12:00 - 1:00 Introduction to Activity & Lunch"
-    - name: "1:00 - 2:00 Guest Lecturer: Omar Asensio, Georgia Tech"
+    - name: "10:00 - 11:00 Introduction to Digital Trace Data"
+    - name: "11:00 - 12:00 Screen Scraping Workshop: Omar Asensio, Georgia Tech"
+    - name: "12:00 - 1:00 Research Talk & Lunch"
+    - name: "1:00 - 2:00 Introduction to Activity"
     - name: "2:00 - 4:30 Groups: Work Session & Wrap-up"
 
 
 - date: 2022-06-23
   name: Text Analysis
   events:
-    - name: "10:00 - 12:00 Text Analysis Workshop"
-    - name: "12:30 - 1:30 Lecture & Lunch: Charlotte Alexander, GSU Legal Analytics"
+    - name: "10:00 - 12:00 Text Analysis Workshop: Charlotte Alexander, GSU Legal Analytics"
+    - name: "12:30 - 1:30 Research Talk & Lunch"
     - name: "1:30 - 2:00 Introduction to Activity"
     - name: "2:00 - 4:30 Groups: Work Session & Wrap-up"
 
