--- a/_data/2022/duke/speakers.yml
+++ b/_data/2022/duke/speakers.yml
@@ -13,3 +13,8 @@
   bio: "Casey Fiesler is an assistant professor in Information Science (and Computer Science by courtesy) at University of Colorado Boulder. She researches and teaches in the areas of technology ethics, internet law and policy, and online communities. Her work on research ethics for data science, ethics education in computing, and broadening participation in computing is supported by the National Science Foundation, and she is the recipient of an NSF CAREER Award.  Also a public scholar, she is a frequent commentator and speaker on topics of technology ethics and policy, and her research has been covered everywhere from The New York Times to Teen Vogue, but she's most proud of her TikToks. She holds a PhD in Human-Centered Computing from Georgia Tech and a JD from Vanderbilt Law School."
   website: https://caseyfiesler.com/
 
+- name: "Lisa Argyle"
+  image: assets/images/lisa_argyle.jpg
+  bio: "Lisa Argyle is an Assistant Professor of Political Science at Brigham Young University, and, in 2022-23, a visiting junior faculty fellow at Washington University in St. Louis. She uses computational methods to study political psychology and public opinion in the United States. Her primary research focuses on understanding how and why people talk about politics in their daily lives, and how conversations and persuasion affect polarization."
+  website: http://www.lpargyle.com
+
