fixed images participants

--- a/_data/2022/duke/participants.yml
+++ b/_data/2022/duke/participants.yml
@@ -34,7 +34,7 @@
   website: https://twitter.com/jacktllp
 
 - name: "Joao Souto Maior"
-  image: /assets/images/joao_sm/jpg
+  image: /assets/images/joao_sm.jpg
   bio: "Joao is a PhD candidate in the Sociology of Education program at the New York University. His research investigates the formation of unequal access to educational resources, particularly along dimensions of race and class. His current work concentrates on inequalities which arise within educational institutions, with a focus on advanced enrollment disparities. His work applies different computational methods, with an emphasis on agent-based modeling techniques, to investigate the mechanisms behind the emergence of these inequalities."
   website: https://joaosoutomaior.com/
 
