--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -275,11 +275,11 @@
       
         **Speakers**
       
-          - [Bhaso Ndzendze, Ph.D.](https://bhasondzendze.co.za), Senior Lecturer and Head of Department, Politics and International Relations, University of Johannesburg (video)[https://youtu.be/MAV5azDk2Vs]
+          - [Bhaso Ndzendze, Ph.D.](https://bhasondzendze.co.za), Senior Lecturer and Head of Department, Politics and International Relations, University of Johannesburg [(video)](https://youtu.be/MAV5azDk2Vs)
           
-          - [Evans Osabuohien, Ph.D.](https://evansosabuohien.com/), Professor of Economics and Head of Department, Economics & Development Studies, Covenant University, Nigeria (video)[https://youtu.be/_Jny4h9RN4M]
+          - [Evans Osabuohien, Ph.D.](https://evansosabuohien.com/), Professor of Economics and Head of Department, Economics & Development Studies, Covenant University, Nigeria [(video](https://youtu.be/_Jny4h9RN4M)
 
-          - [Lebogang Ramafoko](https://docs.google.com/document/d/1cs3rwShBjHTNd6AN8swy9eRR_fQrS0aA/edit), Executive Director of Oxfam South Africa (video)[https://youtu.be/phQb-p_8t18]
+          - [Lebogang Ramafoko](https://docs.google.com/document/d/1cs3rwShBjHTNd6AN8swy9eRR_fQrS0aA/edit), Executive Director of Oxfam South Africa [(video)](https://youtu.be/phQb-p_8t18)
           
           - [Yahya Shaikh](https://www.linkedin.com/in/yahya-shaikh-45646752), Principal Scientist, Connected Health Systems, MITRE (video)
 
@@ -292,7 +292,7 @@
   
     - name: "11:30 - 11:45 Break"
     - name: "11:45 - 12:00 Logistics and Research Speed Dating Logistics (*Zoom*)"
-    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #5: MITRE (slide) (*Zoom*) (video)[https://youtu.be/hHZffikMw0Y] (LIVE Q+A) OR R, STATA, and Python Office hours with Mathematica TAs (as needed) (*Zoom*)
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #5: MITRE (slide) (*Zoom*) [(video)](https://youtu.be/hHZffikMw0Y) (LIVE Q+A) OR R, STATA, and Python Office hours with Mathematica TAs (as needed) (*Zoom*)
         
         - [Hannah De los Santos, Ph.D.](https://www.researchgate.net/profile/Hannah-De-Los-Santos), Lead Data Scientist, Model-based Analytics Department, MITRE"
         
@@ -316,7 +316,7 @@
      
         **Speakers**
       
-          - [Andre Brock, Ph.D.](https://andrebrock.academia.edu/), Associate Professor of Media Studies at Georgia Tech (book)[https://nyu.universitypressscholarship.com/view/10.18574/nyu/9781479820375.001.0001/upso-9781479820375] (video)
+          - [Andre Brock, Ph.D.](https://andrebrock.academia.edu/), Associate Professor of Media Studies at Georgia Tech [(book)](https://nyu.universitypressscholarship.com/view/10.18574/nyu/9781479820375.001.0001/upso-9781479820375) (video)
 
           - [Courtney D. Cogburn, Ph.D.](https://socialwork.columbia.edu/faculty-research/faculty/full-time/courtney-d-cogburn/), Associate Professor of Social Work at Columbia University (slide) (video)
 
@@ -368,7 +368,7 @@
         - [Mark Duerksen, Ph.D.](https://africacenter.org/experts/dr-mark-duerksen/), Research Associate, Africa Center for Strategic Studies" 
         
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
-    - name: "4:00 - 5:30 [Shawndra Hill, Ph.D.](https://www8.gsb.columbia.edu/cbs-directory/detail/sbh2146), Senior lecturer, Marketing, Columbia Business School & Principal Scientist at Facebook in the Core Data Science Team, (Title TBA) (video)[https://youtu.be/1VQo-ye1MS0] - LIVE session to include Q&A and office hour (*Zoom*) (LIVE Q+A)"
+    - name: "4:00 - 5:30 [Shawndra Hill, Ph.D.](https://www8.gsb.columbia.edu/cbs-directory/detail/sbh2146), Senior lecturer, Marketing, Columbia Business School & Principal Scientist at Facebook in the Core Data Science Team, (Title TBA) [(video)](https://youtu.be/1VQo-ye1MS0) - LIVE session to include Q&A and office hour (*Zoom*) (LIVE Q+A)"
     
 
 - date: 2022-07-01
