--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -97,6 +97,8 @@
     
     - <a href='https://doi.org/10.1007/s13524-019-00840-z' target='_blank'>Using an online sample to estimate the size of an offline population</a>
     
+    - <a href='https://www.pnas.org/doi/full/10.1073/pnas.1913050117' target='_blank'>National population mapping from sparse survey data: A hierarchical Bayesian modeling framework to account for uncertainty</a>
+    
     - <a href='https://www.medrxiv.org/content/10.1101/2020.06.01.20118810v1' target='_blank'>Collecting data on HIV-related mortality during household surveys: a randomized validation study in Malawi</a>
     
     - *YouTube videos:* <a href='https://www.youtube.com/watch?v=j8fJGV17Hcg' target='_blank'>Survey Research in the Digital Age</a>, <a href='https://www.youtube.com/watch?v=SLAi9v5CCnM' target='_blank'>Probability and Non-Probability Sampling</a>, <a href='https://www.youtube.com/watch?v=_vecQs7aB6o' target='_blank'>Combining Surveys and Big Data</a>, <a href='https://www.youtube.com/watch?v=cYyu5Ex0twE' target='_blank'>Moving Beyond Simple Experiments</a>"
@@ -107,7 +109,7 @@
     A key goal of HIV prevention and treatment programs worldwide is to end the epidemic of HIV/AIDS by 2030. However, there are limited representative data on HIV/AIDS mortality in many African countries. This presentation will highlight a novel method for collecting representative data on mortality in countries with limited civil registration and vital statistics."
     - name: "**12:30-13:00** Reflections"
     - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-15:30** Tutorial: Introduction to Regular Expressions (Regex) in R"
+    - name: "**14:00-15:30** Tutorial: Automated building footprint extraction from advanced satellite imagery"
     - name: "**15:30-18:00** Group Exercises"
     - name: "**18:00-** Dinner"
 
@@ -130,6 +132,8 @@
     
     - <a href='https://doi.org/10.1038/s41467-022-28498-z' target='_blank'>Population-scale dietary interests during the COVID-19 pandemic</a>
     
+    - <a href='https://doi.org/10.1177%2F08944393221095194' target='_blank'>Using Double Machine Learning to Understand Nonresponse in the Recruitment of a Mixed-Mode Online Panel</a>
+     
     - <a href='https://doi.org/10.1080/03736245.2021.1901239' target='_blank'>Google trends and water conservation awareness: the internet’s contribution in South Africa</a>"
     
     - name: "**10:30-12:00** Introduction to Internet Search Data."
@@ -167,16 +171,16 @@ This panel will discuss key challenges in the collection of precise data as well
 - date: 2022-06-28
   events:
     - name: "**09:00-09:15** Housekeeping and Announcements."
-    - name: "**09:15-13:00** Group Exercises"
-    - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-16:30** Group Exercises"
-    - name: "**16:30-18:00** Invited Talk"
+    - name: "**09:15-12:00** Group Exercises"
+    - name: "**12:00-14:00** Tutorial: Becoming a package developer: An Introduction"
+    - name: "**14:00-15:00** Lunch"
+    - name: "**15:00-18:00** Invited Talk"
     - name: "**18:00-** Dinner"
 
 - date: 2022-06-29
   events:
     - name: "**09:00-09:15** Housekeeping and Announcements."
     - name: "**09:15-13:00** Group Exercises"
-    - name: "**13:00-13:15** Break"
+    - name: "**13:00-14:15** Break"
     - name: "**13:15-15:15** Group Exercises"
     - name: "**15:15-** Closing Dinner and Goodbye."
