--- a/_data/2022/london/speakers.yml
+++ b/_data/2022/london/speakers.yml
@@ -6,7 +6,7 @@
   website: https://www.bi.team/people/alex-sutherland/
 
 - name: Neave O Clery
-  image: https://www.maths.ox.ac.uk/system/files/styles/profile/private/users/photos/neave_new.jpeg
+  image: https://www.turing.ac.uk/sites/default/files/styles/people/public/2018-10/94885575_6947789_699118.png
   bio: "Originally from Dublin,  She is currently Associate Professor at the Centre for Advanced Spatial Analysis (CASA) at University College London where she leads a research group focused on data-driven models for economic development and the emergence of complexity for urban systems. She was previously a Senior Research Fellow at the Mathematical Institute at the University of Oxford. Before this she was a Fulbright Scholar and Postdoctoral Research Fellow at the Center for International Development at the Harvard Kennedy School following her PhD (mathematics) at Imperial College. She is also founder and Editor in Chief of Angle – a journal based at Imperial College focusing on the intersection of policy, politics and science – since 2009."
   website: http://neaveoclery.com/
   
